--- a/portfolio/config.tf.json
+++ b/portfolio/config.tf.json
@@ -1,9 +1,4 @@
 {
-  "variable": {
-    "notice": {
-      "default": "This file is JSON so that init.py can read it easily"
-    }
-  },
   "terraform": {
     "required_version": "~> 0.11.0",
     "backend": {
@@ -11,7 +6,7 @@
         "resource_group_name": "webops",
         "storage_account_name": "nomsstudiowebops",
         "container_name": "terraform",
-        "key": "portfolio.terraform.tfstate"
+        "key": "digital-studio-infra-portfolio.terraform.tfstate"
       }
     }
   },
