--- a/digital-hub/hub-env/preprod/config.tf.json
+++ b/digital-hub/hub-env/preprod/config.tf.json
@@ -1,9 +1,4 @@
 {
-  "variable": {
-    "notice": {
-      "default": "This file is JSON so that init.py can read it easily"
-    }
-  },
   "terraform": {
     "required_version": "~> 0.11.0",
     "backend": {
@@ -11,7 +6,7 @@
         "resource_group_name": "webops-prod",
         "storage_account_name": "nomsstudiowebopsprod",
         "container_name": "terraform",
-        "key": "hub-env-prod.terraform.tfstate"
+        "key": "hub-env-preprod.terraform.tfstate"
       }
     }
   },
