--- a/digital-hub/hub-env/preprod/config.tf.json
+++ b/digital-hub/hub-env/preprod/config.tf.json
@@ -3,8 +3,8 @@
     "required_version": "~> 0.11.0",
     "backend": {
       "azurerm": {
-        "resource_group_name": "webops-prod",
-        "storage_account_name": "nomsstudiowebopsprod",
+        "resource_group_name": "hub-env-preprod",
+        "storage_account_name": "hubenvpreprodstorage",
         "container_name": "terraform",
         "key": "hub-env-preprod.terraform.tfstate"
       }
