--- a/iis/stage/config.tf.json
+++ b/iis/stage/config.tf.json
@@ -3,8 +3,8 @@
     "required_version": "~> 0.11.0",
     "backend": {
       "azurerm": {
-        "resource_group_name": "webops",
-        "storage_account_name": "nomsstudiowebops",
+        "resource_group_name": "iis-stage",
+        "storage_account_name": "iisstagestorage",
         "container_name": "terraform",
         "key": "iis-stage.terraform.tfstate"
       }
