--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,4 @@ jobs:
       - run:
           name: Run truffleHog
           command: |
-            git checkout "${CIRCLE_BRANCH}"
-            /trufflehog/truffleHogger.sh --use_current_branch  --since_commit "$(git rev-parse ${CIRCLE_SHA1}~1)" 
+            /trufflehog/truffleHogger.sh --use_current_branch  --since_commit "$(git rev-parse '@{1 week ago}')" 
