--- a/tools/config/azure-account-config.json
+++ b/tools/config/azure-account-config.json
@@ -1,13 +1,11 @@
 {
-  "comment": "This file's purpose is to allow you to override values in config.tf.json, which is regenerated when init.py or diginit are invoked.",
-  "terraform_version": "~> 0.11.0",
-  "azurerm_version": "0.3.3",
+  "comment": "This file's purpose is to provide a global reference for the tenant and subscription IDs.",
   "devtest": {
   "tenant_id": "747381f4-e81f-4a43-bf68-ced6a1e14edf",
   "subscription_id": "c27cfedb-f5e9-45e6-9642-0fad1a5c94e7"
-},
-"prod": {
+  },
+  "prod": {
   "tenant_id": "747381f4-e81f-4a43-bf68-ced6a1e14edf",
   "subscription_id": "a5ddf257-3b21-4ba9-a28c-ab30f751b383"
-}
+  }
 }
