--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: mojdigitalstudio/git-secrets-ahoy 
+      - image: mojdigitalstudio/git-secrets-ahoy
     working_directory: /git
     steps:
       - checkout
@@ -13,4 +13,4 @@ jobs:
             # give the current checkout a name
             git branch -d "${CIRCLE_BRANCH}"
             git checkout -b "${CIRCLE_BRANCH}"
-            /trufflehog/truffleHogger.sh --use_current_branch  --since_commit "$(git rev-parse HEAD~20)" 
+            /trufflehog/truffleHogger.sh --use_current_branch  --max_depth 20
