fix for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ jobs:
           name: Run truffleHog
           command: |
             # give the current checkout a name
-            git branch -d "${CIRCLE_BRANCH}"
+            git branch -d "${CIRCLE_BRANCH}" || true
             git checkout -b "${CIRCLE_BRANCH}"
             /trufflehog/truffleHogger.sh --use_current_branch  --max_depth 20
