--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
             # give the current checkout a name
             git branch -d "${CIRCLE_BRANCH}" || true
             git checkout -b "${CIRCLE_BRANCH}"
-            /trufflehog/truffleHogger.sh --use_current_branch  --max_depth 20
+            /trufflehog/truffleHogger.sh --use_current_branch --use_current_branch --since_commit $(git rev-parse truffleHog_marker^{commit})
