--- a/notm/webapp-config.template.json
+++ b/notm/webapp-config.template.json
@@ -34,19 +34,10 @@
         "NOMS_PRIVATE_KEY": {
             "type": "secureString"
         },
-        "API_GATEWAY_PRIVATE_KEY": {
-            "type": "secureString"
-        },
         "GOOGLE_ANALYTICS_ID": {
             "type": "secureString"
         },
-        "HMPPS_COOKIE_NAME": {
-            "type": "string"
-        },
-        "HMPPS_COOKIE_DOMAIN": {
-            "type": "string"
-        },
-        "SESSION_COOKIE_SECRET": {
+        "SESSION_SECRET": {
             "type": "secureString"
         }
     },
@@ -65,11 +56,8 @@
                 "USE_API_GATEWAY_AUTH": "[parameters('USE_API_GATEWAY_AUTH')]",
                 "NOMS_TOKEN": "[parameters('NOMS_TOKEN')]",
                 "NOMS_PRIVATE_KEY": "[parameters('NOMS_PRIVATE_KEY')]",
-                "API_GATEWAY_PRIVATE_KEY": "[parameters('API_GATEWAY_PRIVATE_KEY')]",
                 "GOOGLE_ANALYTICS_ID": "[parameters('GOOGLE_ANALYTICS_ID')]",
-                "HMPPS_COOKIE_NAME": "[parameters('HMPPS_COOKIE_NAME')]",
-                "HMPPS_COOKIE_DOMAIN": "[parameters('HMPPS_COOKIE_DOMAIN')]",
-                "SESSION_COOKIE_SECRET": "[parameters('SESSION_COOKIE_SECRET')]"
+                "SESSION_SECRET": "[parameters('SESSION_SECRET')]"
             }
         }
     ]
