--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ jobs:
           name: Run truffleHog
           command: |
             # give the current checkout a name
-            git branch -d "${CIRCLE_BRANCH}" || true
+            git branch -D "${CIRCLE_BRANCH}" || true
             git checkout -b "${CIRCLE_BRANCH}"
             /trufflehog/truffleHogger.sh --use_current_branch --use_current_branch --since_commit $(git rev-parse truffleHog_marker^{commit})
