give read-only access to new nomis api team, so they can see the status of vms and application gateways. Note, scope is limited to newnomis-api rg only

--- a/azure/nomis-api-releases.json
+++ b/azure/nomis-api-releases.json
@@ -6,7 +6,8 @@
     "Microsoft.KeyVault/vaults/*",
     "Microsoft.ContainerRegistry/registries/*/write",
     "Microsoft.ContainerRegistry/registries/*/read",
-    "Microsoft.ContainerRegistry/registries/listCredentials/*"
+    "Microsoft.ContainerRegistry/registries/listCredentials/*",
+    "*/read"
   ],
   "NotActions": [
     "Microsoft.KeyVault/vaults/accessPolicies/write",
