allow access to backend health of app gw

--- a/azure/nomis-api-releases.json
+++ b/azure/nomis-api-releases.json
@@ -7,6 +7,7 @@
     "Microsoft.ContainerRegistry/registries/*/write",
     "Microsoft.ContainerRegistry/registries/*/read",
     "Microsoft.ContainerRegistry/registries/listCredentials/*",
+    "Microsoft.Network/applicationGateways/backendhealth/action",
     "*/read"
   ],
   "NotActions": [
