updated repo app

--- a/.github/workflows/plan_iis_prod.yml
+++ b/.github/workflows/plan_iis_prod.yml
@@ -16,19 +16,19 @@ on:
       - ips.tf
 
 env:
-  ENVIRONMENT: prod
+  ENVIRONMENT: iis/prod
   GITHUB_USERNAME: hmpps-dso-automation
-  GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+  GITHUB_TOKEN: ${{ secrets.DSO_GITHUB_AUTOMATION_PAT }}
   TERRAFORM_CONFIG: iis/prod
-  ARM_CLIENT_ID: f98c8e0b-b98b-4bb1-98fd-bdfde40787ce # GitHubActionsProd
-  ARM_CLIENT_SECRET: ${{ secrets.SP_SECRET_PROD }} 
+  ARM_CLIENT_ID: e5a6738f-5408-42ea-81e8-b708232cd78e # digital-studio-infra-prod
+  ARM_CLIENT_SECRET: ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} 
   ARM_SUBSCRIPTION_ID: a5ddf257-3b21-4ba9-a28c-ab30f751b383
   ARM_TENANT_ID: 747381f4-e81f-4a43-bf68-ced6a1e14edf
 
 jobs:
   verify-terraform-config:
     runs-on: ubuntu-latest
-    environment: prod
+    environment: iis/prod
 
     steps:
       - name: Display terraform config path
