--- a/.github/workflows/plan_iis_prod.yml
+++ b/.github/workflows/plan_iis_prod.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   verify-terraform-config:
     runs-on: ubuntu-latest
-    environment: env.ENVIRONMENT
+    environment: ${{ env.ENVIRONMENT }}
 
     steps:
       - name: Checkout
