--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   verify-terraform-config:
     runs-on: ubuntu-latest
-    environment: ${{ env.ENVIRONMENT }}
+    environment: iis/preprod
 
     steps:
       - name: print stuff
