--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -19,7 +19,7 @@ env:
   GITHUB_ORGANIZATION: ministryofjustice
   ENVIRONMENT: iis/preprod
   GITHUB_USERNAME: hmpps-dso-automation
-  GITHUB_TOKEN: ${{ secrets.DSO_GITHUB_AUTOMATION_PAT }}
+  GITHUB_TOKEN: ${{ secrets.DSO_GITHUB_AUTOMATION_PAT }} # doesn't show up
   WORKING_DIRECTORY: iis/preprod
 
 jobs:
@@ -34,12 +34,6 @@ jobs:
           echo "ARM_CLIENT_SECRET=`echo ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} | sed 's/.*clientSecret:\([^ ]*\).*/\1/g'`" >> $GITHUB_ENV
           echo "ARM_SUBSCRIPTION_ID=`echo ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} | sed 's/.*subscriptionId:\([^ ]*\).*/\1/g'`" >> $GITHUB_ENV
           echo "ARM_TENANT_ID=`echo ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} | sed 's/.*tenantId:\([^ ]*\).*/\1/g'`" >> $GITHUB_ENV
-          echo ${{ env.GITHUB_TOKEN }}
-          
-
-      - name: define arm vars
-        run: |
-          echo ${{ env.ARM_CLIENT_ID }}
 
       # - uses: azure/login@v1
       #   with:
@@ -70,32 +64,6 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: terraform validate
 
-      - name: terraform fmt
-        if: ${{ github.event_name == 'pull_request' }}
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        id: format
-        run: |
-          terraform fmt > tf_fmt.txt
-          fmt=$(wc -l tf_fmt.txt | awk '{print $1;}')
-          if [[ $fmt -gt 0 ]]; then
-            echo 'TF_FMT<<EOF' >> $GITHUB_ENV
-            cat tf_fmt.txt >> $GITHUB_ENV
-            echo 'EOF' >> $GITHUB_ENV
-            exit 1
-          fi
-
-      - name: Post a PR comment with the files that need fomatting
-        if: ${{ github.event_name == 'pull_request' && failure() }}
-        uses: allthatjazzleo/actions-pull-request-add-comment@master
-        with:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-          message: "The following files need formatting in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_FMT }}\n```"
-
-      - name: terraform refresh
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: |
-          terraform refresh
-
       - name: terraform plan
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
@@ -105,17 +73,3 @@ jobs:
           echo 'TF_PLAN_OUT<<EOF' >> $GITHUB_ENV
           cat tf_plan.txt >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
-      
-      - name: Post a PR comment with the terraform plan output
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: allthatjazzleo/actions-pull-request-add-comment@master
-        with:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-          message: "Terraform plan output in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_PLAN_OUT }}\n```"
-
-      - name: Post a post merge PR comment with the terraform plan output
-        if: ${{ github.event.pull_request.merged || github.event_name == 'push' }}
-        uses: guchaocharlie/comment-pr@v1
-        with:
-          github-token: ${{ env.GITHUB_TOKEN }}
-          comment: "Terraform plan output in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_PLAN_OUT }}\n```"
