--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -35,9 +35,9 @@ jobs:
           echo "ARM_SUBSCRIPTION_ID=`echo ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} | sed 's/.*subscriptionId:\([^ ]*\).*/\1/g'`" >> $GITHUB_ENV
           echo "ARM_TENANT_ID=`echo ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }} | sed 's/.*tenantId:\([^ ]*\).*/\1/g'`" >> $GITHUB_ENV
 
-      # - uses: azure/login@v1
-      #   with:
-      #     creds: ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }}
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.DIGITAL_STUDIO_INFRA_PROD }}
       
       - name: Checkout the code
         uses: actions/checkout@v2
