--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -66,6 +66,10 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: terraform init
 
+      - name: Terraform providers
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: terraform providers
+
       - name: terraform validate
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: terraform validate
