--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -57,7 +57,8 @@ jobs:
         run: cat backend.tf
         
       - name: terraform code formatter
-        uses: ministryofjustice/github-actions/code-formatter@main       
+        uses: ministryofjustice/github-actions/code-formatter@main
+       
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
       
@@ -80,15 +81,20 @@ jobs:
       - name: terraform plan
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
-          terraform plan -out=tf.plan -refresh=false -no-color > tf_out.txt
-          tail -c 65476 tf_out.txt > tf_plan.txt
-          cat tf_plan.txt
-          echo 'TF_PLAN_OUT<<EOF' >> $GITHUB_ENV
-          cat tf_plan.txt >> $GITHUB_ENV
-          echo 'EOF' >> $GITHUB_ENV
+          terraform plan -out=tf.plan -refresh=false -no-color
+          
+      # - name: terraform plan
+      #   working-directory: ${{ env.WORKING_DIRECTORY }}
+      #   run: |
+      #     terraform plan -out=tf.plan -refresh=false -no-color > tf_out.txt
+      #     tail -c 65476 tf_out.txt > tf_plan.txt
+      #     cat tf_plan.txt
+      #     echo 'TF_PLAN_OUT<<EOF' >> $GITHUB_ENV
+      #     cat tf_plan.txt >> $GITHUB_ENV
+      #     echo 'EOF' >> $GITHUB_ENV
 
-      - name: Post a PR comment with the terraform plan output
-        uses: allthatjazzleo/actions-pull-request-add-comment@master
-        with:
-          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-          message: "Terraform plan output in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_PLAN_OUT }}\n```"
+      # - name: Post a PR comment with the terraform plan output
+      #   uses: allthatjazzleo/actions-pull-request-add-comment@master
+      #   with:
+      #     GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+      #     message: "Terraform plan output in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_PLAN_OUT }}\n```"
