--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -63,17 +63,13 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: terraform init
 
-      - name: Terraform providers
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: terraform providers
-
       - name: terraform validate
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: terraform validate
 
-      - name: terraform refresh
-        working-directory: ${{ env.WORKING_DIRECTORY }}         
-        run: terraform refresh
+      # - name: terraform refresh
+      #   working-directory: ${{ env.WORKING_DIRECTORY }}         
+      #   run: terraform refresh
 
       - name: terraform plan
         working-directory: ${{ env.WORKING_DIRECTORY }}
