--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -71,10 +71,10 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}         
         run: terraform refresh
 
-      - name: terraform plan
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: |
-          terraform plan -out=tf.plan -refresh=false -no-color
+      # - name: terraform plan
+      #   working-directory: ${{ env.WORKING_DIRECTORY }}
+      #   run: |
+      #     terraform plan -out=tf.plan -refresh=false -no-color
           
       # - name: terraform plan
       #   working-directory: ${{ env.WORKING_DIRECTORY }}
