--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -14,6 +14,7 @@ on:
       - shared/apps/iis.tf
       - azure-prod.tf
       - ips.tf
+      - .github/workflows/plan_iis_preprod.yml
 
 env:
   GITHUB_ORGANIZATION: ministryofjustice
