--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -22,7 +22,10 @@ env:
   GITHUB_USERNAME: hmpps-dso-automation
   GITHUB_TOKEN: ${{ secrets.DSO_GITHUB_AUTOMATION_PAT }}
   WORKING_DIRECTORY: iis/preprod
+  ARM_CLIENT_ID: d91544c4-212d-4da5-b6a4-ddf65fe188a5
   ARM_CLIENT_SECRET: ${{ secrets.DIGITAL_STUDIO_INFRA_PROD_CLIENT_SECRET }}
+  ARM_SUBSCRIPTION_ID: a5ddf257-3b21-4ba9-a28c-ab30f751b383
+  ARM_TENANT_ID: 747381f4-e81f-4a43-bf68-ced6a1e14edf
 
 jobs:
   verify-terraform-config:
@@ -71,6 +74,7 @@ jobs:
       - name: terraform plan
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
+          az login
           terraform plan -out=tf.plan -refresh=false -no-color
           
       # - name: terraform plan
