--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -83,7 +83,34 @@ jobs:
           echo 'EOF' >> $GITHUB_ENV
 
       - name: Post a PR comment with the terraform plan output
+        if: ${{ github.event_name == 'pull_request' }}
         uses: allthatjazzleo/actions-pull-request-add-comment@master
         with:
           GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
-          message: "Terraform plan output in ${{ env.ENVIRONMENT }} environment: \n```\n${{ env.TF_PLAN_OUT }}\n```"
+          message: "Terraform plan output in ${{ env.ENVIRONMENT }}: \n```\n${{ env.TF_PLAN_OUT }}\n```"
+
+
+      - name: Post a post merge PR comment with the terraform plan output
+        if: ${{ github.event.pull_request.merged || github.event_name == 'push' }}
+        uses: guchaocharlie/comment-pr@v1
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          comment: "Terraform plan output in ${{ env.ENVIRONMENT }}: \n```\n${{ env.TF_PLAN_OUT }}\n```"
+
+      - name: terraform apply
+        if: ${{ github.event.pull_request.merged || github.event_name == 'push' || github.event_name == 'schedule' }}
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: |
+          terraform apply -auto-approve -no-color tf.plan > tf_out.txt
+          tail -c 65476 tf_out.txt > tf_apply.txt
+          cat tf_apply.txt
+          echo 'TF_APPLY_OUT<<EOF' >> $GITHUB_ENV
+          cat tf_apply.txt >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+      
+      - name: Post a post merge PR comment with the terraform apply output
+        if: ${{ github.event.pull_request.merged || github.event_name == 'push' }}
+        uses: guchaocharlie/comment-pr@v1
+        with:
+          github-token: ${{ env.GITHUB_TOKEN }}
+          comment: "Terraform apply output in ${{ env.ENVIRONMENT }}: \n```\n${{ env.TF_APPLY_OUT }}\n```"
