--- a/.github/workflows/plan_iis_preprod.yml
+++ b/.github/workflows/plan_iis_preprod.yml
@@ -56,6 +56,7 @@ jobs:
           terraform_version: 0.14.9
         
       - name: terraform code formatter
+        if: ${{ github.event_name == 'pull_request' }}
         uses: ministryofjustice/github-actions/code-formatter@main
       
       - name: Terraform Init
