--- a/.github/workflows/iis_stage.yml
+++ b/.github/workflows/iis_stage.yml
@@ -10,6 +10,7 @@ on:
       - azure-devtest.tf
       - ips.tf
       - .github/workflows/plan_iis_stage.yml
+      - shared/modules/*
   pull_request:
     types: 
       - opened
@@ -24,6 +25,7 @@ on:
       - azure-devtest.tf
       - ips.tf
       - .github/workflows/plan_iis_stage.yml
+      - shared/modules/*
 
 env:
   GITHUB_ORGANIZATION: ministryofjustice
